--- a/style.css
+++ b/style.css
@@ -89,10 +89,10 @@
 
  .home
  {
-   display: grid;
+   display: flex;
    justify-content: center;
    align-items: center;
-   grid-template-columns: 600px 300px;
+   flex-direction: row;
  }
  .home-img img
  {
@@ -324,7 +324,7 @@
 
 .portfolio-box img
 {
-  width: 407px;
+  width: 100%;
   height: 300px;
   transition: .5s ease;
 }
@@ -552,7 +552,7 @@
   }
   .home-content h1
   {
-    font-size: 5rem;
+    font-size: 3rem;
   }
   .home-img img
   {
