removed unnecessary drop down in mobile number
removed unnecessary drop down in mobile number

--- a/style.css
+++ b/style.css
@@ -421,6 +421,11 @@
   margin: .7rem 0;
 }
 
+  input[type=number]::-webkit-inner-spin-button,
+  input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 .contact form .input-box input
 {
   width: 49%;
