--- a/style.css
+++ b/style.css
@@ -503,6 +503,9 @@ logoImg {
   html{
     font-size: 55%;
   }
+  .header{
+    padding: 3rem 3%;
+  }
 }
 
 @media(max-width:991px)
@@ -529,10 +532,7 @@ logoImg {
   .footer
   {
     padding:2rem 3%;
-  }
-}
-
-@media (max-width:768px)
+  }}@media(max-width:991px)
 {
   #menu-icon
   {
@@ -544,13 +544,13 @@ logoImg {
     top: 100%;
     left: 0;
     width: 100%;
-    padding: 1rem 3%;
+    padding: 1rem 1%;
     background: var(--bg-color);
     border-top: .1rem solid rgba(0,0,0,.2);
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
     display: none;
   }
-
+  
   .navbar :active
   {
     display: block;
@@ -561,6 +561,7 @@ logoImg {
     font-size: 2rem;
     margin: 3rem 0 ;
 
+    
   }
   .home
   {
