--- a/style.css
+++ b/style.css
@@ -1,199 +1,167 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+@import url("https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   text-decoration: none;
   border: none;
   outline: none;
   scroll-behavior: smooth;
-  font-family: 'Playfair Display', serif;
-  }
+  font-family: "Playfair Display", serif;
+}
 
-  :root
-  {
-    --bg-color:#053314;
-    --second-color:#064b10;
-    --txt-color:#fff;
-    --main-color:rgb(192, 223, 100);
+:root {
+  --bg-color: #053314;
+  --second-color: #064b10;
+  --txt-color: #fff;
+  --main-color: rgb(192, 223, 100);
+}
 
-  }
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
 
-  html{
-    font-size: 62.5%;
-    overflow-x:hidden;
+body {
+  background-color: var(--bg-color);
+  color: var(--txt-color);
+}
+section {
+  min-height: 100vh;
+  padding: 10rem 9% 2rem;
+}
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2rem 9%;
+  background-color: var(--bg-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
+}
+.header.sticky {
+  border-bottom: 0.1rem solid rgb(252, 187, 223);
+}
 
-  }
-  
- body
- {
-    background-color: var(--bg-color);
-    color: var(--txt-color);
-
- }
- section
- {
-   min-height: 100vh;
-   padding: 10rem 9% 2rem;
- }
- .header
- {
-    position: fixed;
-   top: 0;
-   left: 0;
-   width:100%;
-   padding:2rem 9%;
-   background-color: var(--bg-color);
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   z-index: 100;
- }
- .header.sticky
- {
-  border-bottom: .1rem solid rgb(252, 187, 223);
- }
-
- .logo
- {
-    font-size: 2.5rem;
-    color: var(--txt-color);
-    font-weight: 600;
-    cursor: default;
- }
- .navbar a
- {
-    font-size: 2rem;
-    color:var(--txt-color);
-    margin-left:4rem;
-    transition: .3s;
- }
- .navbar a:hover,
- .navbar a.active
- {
-    color:var(--main-color);
-    font-size:3rem;
-    
- }
-  .navbar.active {
+.logo {
+  font-size: 2.5rem;
+  color: var(--txt-color);
+  font-weight: 600;
+  cursor: default;
+}
+.navbar a {
+  font-size: 2rem;
+  color: var(--txt-color);
+  margin-left: 4rem;
+  transition: 0.3s;
+}
+.navbar a:hover,
+.navbar a.active {
+  color: var(--main-color);
+  font-size: 3rem;
+}
+.navbar.active {
   display: block;
 }
 
- #menu-icon
- {
-    font-size: 3.6rem;
-    color:var(--txt-color);
-    display:none;
- }
+#menu-icon {
+  font-size: 3.6rem;
+  color: var(--txt-color);
+  display: none;
+}
 
- .home
- {
-   display: grid;
-   justify-content: center;
-   align-items: center;
-   grid-template-columns: 600px 300px;
- }
- .home-img img
- {
+.home {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: 600px 300px;
+}
+.home-img img {
   width: 20vw;
-  animation:floatImage 4s ease-in-out infinite;
- }
+  animation: floatImage 4s ease-in-out infinite;
+}
 
- @keyframes floatImage{
-  0%
-  {
-    transform:translateY(0);
+@keyframes floatImage {
+  0% {
+    transform: translateY(0);
   }
-  50%
-  {
-    transform:translateY(-2.4rem);
+  50% {
+    transform: translateY(-2.4rem);
   }
-  100%
-  {
-    transform:translateY(0);
+  100% {
+    transform: translateY(0);
   }
- }
+}
 
- .home-content h3
- {
-   font-size: 4.2rem;
-   font-weight: 700;
- }
- .home-content h3:nth-of-type(2)
- {
+.home-content h3 {
+  font-size: 4.2rem;
+  font-weight: 700;
+}
+.home-content h3:nth-of-type(2) {
   margin-bottom: 2rem;
- }
- span
- {
-  color:var(--main-color);
- }
+}
+span {
+  color: var(--main-color);
+}
 
-
- .home-content h1
- {
-   font-size: 5.6rem;
-   font-weight: 700;
-   line-height: 1.3;
- }
-.social-media a
-{
+.home-content h1 {
+  font-size: 5.6rem;
+  font-weight: 700;
+  line-height: 1.3;
+}
+.social-media a {
   display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 4rem;
   height: 4rem;
   background: transparent;
-  border: .2rem solid var(--main-color);
+  border: 0.2rem solid var(--main-color);
   border-radius: 50%;
   font-size: 2rem;
   color: var(--main-color);
   margin: 3rem 1.5rem 3rem 0;
-  transition: .5sec ease;
-
+  transition: 0.5sec ease;
 }
-.social-media a:hover
-{
+.social-media a:hover {
   background: var(--main-color);
   color: var(--second-color);
   box-shadow: 0 0 1rem var(--main-color);
 }
 
-.btn
-{
+.btn {
   display: inline-block;
   padding: 1rem 2.8rem;
   background: var(--main-color);
   border-radius: 4rem;
   box-shadow: 0 0 1rem var(--main-color);
   font-size: 1.6rem;
-  color:var(--second-color);
-  letter-spacing: .1rem;
+  color: var(--second-color);
+  letter-spacing: 0.1rem;
   font-weight: 600;
-  transition: .5sec ease;
+  transition: 0.5sec ease;
 }
 
-
-.btn-cv-res
-{
+.btn-cv-res {
   display: inline-block;
   padding: 1rem 2.8rem;
   background: var(--main-color);
   border-radius: 4rem;
   box-shadow: 0 0 1rem var(--main-color);
   font-size: 1.6rem;
-  color:var(--second-color);
-  letter-spacing: .1rem;
+  color: var(--second-color);
+  letter-spacing: 0.1rem;
   font-weight: 600;
-  transition: .5sec ease;
+  transition: 0.5sec ease;
   margin-bottom: 15px;
   margin-right: 15px;
 }
 
-
-
- .btn2
- {
+.btn2 {
   margin-left: 9px;
   display: inline-block;
   padding: 1rem 2.8rem;
@@ -201,23 +169,22 @@
   border-radius: 4rem;
   box-shadow: 0 0 1rem var(--main-color);
   font-size: 1.6rem;
-  color:var(--second-color);
-  letter-spacing: .1rem;
+  color: var(--second-color);
+  letter-spacing: 0.1rem;
   font-weight: 600;
-  transition: .5sec ease;
+  transition: 0.5sec ease;
 }
 
-.btn:hover{
+.btn:hover {
   box-shadow: none;
 }
-.btn2:hover{
+.btn2:hover {
   box-shadow: none;
 }
-.space{
-  display:block;
+.space {
+  display: block;
 }
-.about
-{
+.about {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -225,124 +192,102 @@
   background: var(--second-color);
 }
 
-.about-img img{
-  width:35vw;
+.about-img img {
+  width: 35vw;
 }
-.heading
-{
+.heading {
   text-align: center;
   font-size: 4.5rem;
-
 }
 
-.about-content h2
-{
+.about-content h2 {
   text-align: left;
   line-height: 1.2;
 }
-.about-content h3
-{
+.about-content h3 {
   font-size: 2.6rem;
 }
-.about-content p{
+.about-content p {
   font-size: 1.6rem;
   margin: 2rem 0 3rem;
 }
 
-.services h2 
-{
+.services h2 {
   margin-bottom: 5rem;
-
 }
-.services-container
-{
+.services-container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap:2rem;
+  gap: 2rem;
 }
 
-.services-container .services-box
-{
+.services-container .services-box {
   flex: 1 1 30rem;
   background: var(--second-color);
   padding: 3rem 2rem 4rem;
   border-radius: 2rem;
   text-align: center;
-  border:.2rem solid var(--bg-color);
-  transition: .5s ease;
+  border: 0.2rem solid var(--bg-color);
+  transition: 0.5s ease;
 }
-.services-container .services-box:hover
-{
+.services-container .services-box:hover {
   border-color: var(--main-color);
   transform: scale(1.02);
 }
 
-.services-box i
-{
+.services-box i {
   font-size: 7rem;
   color: var(--main-color);
 }
 
-.services-box h3
-{
+.services-box h3 {
   font-size: 2.6rem;
 }
-.services-box p
-{
+.services-box p {
   font-size: 1.6rem;
   margin: 1rem 0 3rem;
-
 }
-.portfolio
-{
+.portfolio {
   background-color: var(--second-color);
-
 }
-.portfolio h2
-{
+.portfolio h2 {
   margin-bottom: 4rem;
 }
 
-.portfolio-container
-{
+.portfolio-container {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
-  gap:2.5rem;
+  gap: 2.5rem;
 }
 
-.portfolio-container .portfolio-box
-{
+.portfolio-container .portfolio-box {
   position: relative;
-  border-radius:2rem;
+  border-radius: 2rem;
   box-shadow: 0 0 1rem var(--bg-color);
   overflow: hidden;
   display: flex;
 }
 
-.portfolio-box img
-{
+.portfolio-box img {
   width: 407px;
   height: 300px;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
-.portfolio-box:hover img
-{
+.portfolio-box:hover img {
   transform: scale(1.1);
-
 }
 
-.portfolio-box .portfolio-layer
-{
+.portfolio-box .portfolio-layer {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.1),var(--main-color));
+  background: linear-gradient(rgba(0, 0, 0, 0.1), var(--main-color));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -350,270 +295,212 @@
   text-align: center;
   padding: 0 4rem;
   transform: translateY(100%);
-  transition: .5s ease;
-  color:rgb(227, 233, 211);
+  transition: 0.5s ease;
+  color: rgb(227, 233, 211);
 }
 
-.portfolio-box:hover .portfolio-layer
-{
+.portfolio-box:hover .portfolio-layer {
   transform: translateY(0);
 }
-.portfolio-layer h4
-{
+.portfolio-layer h4 {
   font-size: 3rem;
-
 }
 
-.portfolio-layer p
-{
+.portfolio-layer p {
   font-size: 1.6rem;
-  margin: .3rem 0 1rem;
+  margin: 0.3rem 0 1rem;
 }
 
-.portfolio-layer a
-{
+.portfolio-layer a {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width:5rem;
+  width: 5rem;
   height: 5rem;
   background: var(--txt-color);
   border-radius: 50%;
-
 }
 
-.portfolio-layer a i
-{
+.portfolio-layer a i {
   font-size: 2rem;
   color: var(--second-color);
 }
 
-.contact h2
-{
+.contact h2 {
   margin-bottom: 3rem;
-
 }
 
-.contact form
-{
+.contact form {
   max-width: 70rem;
   margin: 1rem auto;
   text-align: center;
   margin-bottom: 3rem;
-
 }
-.contact form .input-box
-{
+.contact form .input-box {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
 .contact form .input-box input,
-.contact form textarea
-{
+.contact form textarea {
   width: 100%;
   padding: 1.5rem;
   font-size: 1.6rem;
   color: var(--txt-color);
   background: var(--second-color);
-  border-radius: .8rem;
-  margin: .7rem 0;
+  border-radius: 0.8rem;
+  margin: 0.7rem 0;
 }
 
-.contact form .input-box input
-{
+.contact form .input-box input {
   width: 49%;
 }
 
-.contact form textarea
-{
-  resize:none;
+.contact form textarea {
+  resize: none;
 }
-.contact form .btn
-{
+.contact form .btn {
   margin-top: 2rem;
   cursor: pointer;
 }
 
-
-
-.footer
-{
-  
+.footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex: wrap;
   padding: 2rem 9%;
-  background:#0e4b16;
-
+  background: #0e4b16;
 }
 
-.footer-text p
-{
+.footer-text p {
   font-size: 1.6rem;
 }
 
-.footer-iconTop a
-{
+.footer-iconTop a {
   display: grid;
   justify-content: center;
   align-items: center;
-  padding:.8rem;
+  padding: 0.8rem;
   background: var(--main-color);
-  border-radius: .8rem;
-  transition: .5s ease;
+  border-radius: 0.8rem;
+  transition: 0.5s ease;
+}
 
-}
-.footer-iconTop a:hover
-{
+.footer-iconTop a:hover {
   box-shadow: 0 0 1rem var(--main-color);
+  transform: scale(1.1);
 }
-.footer-iconTop a i
-{
+
+.footer-iconTop a i {
   font-size: 2.4rem;
   color: var(--second-color);
 }
 
-
-@media(max-width:1200px)
-{
-  html{
+@media (max-width: 1200px) {
+  html {
     font-size: 55%;
   }
 }
 
-@media(max-width:991px)
-{
-  .header{
+@media (max-width: 991px) {
+  .header {
     padding: 2rem 3%;
   }
-  .section
-  {
+  .section {
     padding: 10rem 3% 2rem;
   }
-  .services
-  {
-    padding-bottom:7rem;
-  }
-  .portfolio
-  {
+  .services {
     padding-bottom: 7rem;
   }
-  .contact
-  {
-    min-width:auto;
+  .portfolio {
+    padding-bottom: 7rem;
   }
-  .footer
-  {
-    padding:2rem 3%;
+  .contact {
+    min-width: auto;
+  }
+  .footer {
+    padding: 2rem 3%;
   }
 }
 
-@media (max-width:768px)
-{
-  #menu-icon
-  {
+@media (max-width: 768px) {
+  #menu-icon {
     display: block;
   }
-  .navbar
-  {
+  .navbar {
     position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
     padding: 1rem 3%;
     background: var(--bg-color);
-    border-top: .1rem solid rgba(0,0,0,.2);
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
     display: none;
   }
 
-  .navbar :active
-  {
+  .navbar :active {
     display: block;
   }
-  .navbar a
-  {
+  .navbar a {
     display: block;
     font-size: 2rem;
-    margin: 3rem 0 ;
-
+    margin: 3rem 0;
   }
-  .home
-  {
+  .home {
     flex-direction: column;
-
   }
-  .home-content h3
-  {
+  .home-content h3 {
     font-size: 2.6rem;
   }
-  .home-content h1
-  {
+  .home-content h1 {
     font-size: 5rem;
   }
-  .home-img img
-  {
-    width:70vw;
-    margin-top: 4rem;
-
-  }
-  .about
-  {
-    flex-direction: column-reverse;
-  }
-  .about img
-  {
+  .home-img img {
     width: 70vw;
     margin-top: 4rem;
-
   }
-  
-  .services h2
-  {
-    margin-bottom: 3rem;
+  .about {
+    flex-direction: column-reverse;
   }
-  .portfolio h2
-  {
-    margin-bottom: 3rem;
-  }
-  .portfolio-container
-  {
-    grid-template-columns: repeat(2,1fr);
+  .about img {
+    width: 70vw;
+    margin-top: 4rem;
   }
 
+  .services h2 {
+    margin-bottom: 3rem;
+  }
+  .portfolio h2 {
+    margin-bottom: 3rem;
+  }
+  .portfolio-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
-@media (max-width: 617px)
-{
-  .portfolio-container
-  {
+@media (max-width: 617px) {
+  .portfolio-container {
     grid-template-columns: 1fr;
   }
 }
 
-
-@media (max-width: 365px)
-{
-  .home-img
-  {
+@media (max-width: 365px) {
+  .home-img {
     width: 90vw;
   }
-  .about-img
-  {
-    width:90vw;
+  .about-img {
+    width: 90vw;
   }
-  .footer
-  {
+  .footer {
     flex-direction: column-reverse;
   }
-  .footer p
-{
-  text-align: center;
-  margin-top: 2rem;
-}
+  .footer p {
+    text-align: center;
+    margin-top: 2rem;
+  }
 }
 .footer-left {
   text-align: left;
@@ -621,12 +508,39 @@
 .footer-right {
   text-align: right;
 }
-    .services-box a {
-        text-decoration: none; /* Remove underline */
-        color: inherit; /* Inherit the color from the parent */
-        cursor: pointer; /* Show pointer cursor on hover */
-    }
+.services-box a {
+  text-decoration: none; /* Remove underline */
+  color: inherit; /* Inherit the color from the parent */
+  cursor: pointer; /* Show pointer cursor on hover */
+}
 
-    .services-box a:hover {
-        text-decoration: underline; /* Add underline on hover if needed */
-    }
+.services-box a:hover {
+  text-decoration: underline; 
+}
+.input-box input[type="text"],
+.input-box input[type="number"],
+textarea {
+  border: 1px solid white;
+  padding: 8px;
+  margin-bottom: 10px;
+  transition: border-color 0.3s;
+}
+
+.input-box input[type="text"]:hover,
+.input-box input[type="number"]:hover,
+textarea:hover {
+  border-color: rgb(192, 223, 100);
+}
+.btn {
+  background-color: green;
+  color: white;
+  border: 1px solid white;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s;
+}
+.btn:hover {
+  background-color: rgb(192, 223, 100);
+  color: black;
+  transform: scale(1.1);
+}
