--- a/style.css
+++ b/style.css
@@ -692,3 +692,30 @@ logoImg {
     .services-box a:hover {
         text-decoration: underline; /* Add underline on hover if needed */
     }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+  color:none;
+  background-color: none;
+  display: none;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: grey; 
+  border-radius: 10px;
+  
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(192, 223, 100); 
+}
