--- a/style.css
+++ b/style.css
@@ -332,99 +332,125 @@
   margin: 1rem 0 3rem;
 
 }
-.portfolio
-{
-  background-color: var(--second-color);
+ /* Image Gallery  Start*/
+ span
+ {
+  color:var(--main-color);
+ }
+ .heading
+ {
+   text-align: center;
+   font-size: 4.5rem;
+ 
+ }
+ .slider{
+     position: relative;
+     margin-top: 100px;
+     width: 100%;
+     height: 450px;
+     overflow: hidden;
+   /* gap: 2rem; */
+ }
+ .item{
+     position: absolute;
+     width: 407px;
+     height: 320px;
+     text-align: justify;
+     /* background-color: #fff; */
+     border-radius: 2rem;
+     /* padding: 10px; */
+     transition:  0.5s;
+     left: calc(50% - 110px);
+     top: 0;
+   gap: 2rem;
+ }
+ .item img{
+   border-radius: 2rem;
+ }
+ 
+ 
+ #next{
+     position: absolute;
+     right: 30px;
+     top: 40%;
+ }
+ #prev{
+     position: absolute;
+     left: 30px;
+     top: 40%;
+ }
+ #prev, #next{
+     color: #fff;
+     background: none;
+     border: none;
+     font-size: xxx-large;
+     font-family: monospace;
+     font-weight: bold;
+     opacity: 0.5;
+     transition: opacity 0.5s;
+ }
+ #prev:hover,
+ #next:hover{
+     opacity: 10;
+ }
+ 
+ .item .portfolio-layer
+ {
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   width: 100%;
+   height: 110%;
+    
+   background: linear-gradient(rgba(0, 0, 0, 0.1),var(--main-color));
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   text-align: center;
+   padding: 0 4rem;
+   transform: translateY(100%);
+   transition: .85s ease;
+   color:rgb(227, 233, 211);
+   border-radius: 2rem;
+ }
+ 
+ .item:hover .portfolio-layer
+ {
+   transform: translateY(0);
+ }
+ .portfolio-layer h4
+ {
+   font-size: 3em;
+ 
+ }
+ 
+ .portfolio-layer p
+ {
+   font-size: 1.6rem;
+   margin: .3rem 0 1rem;
+ }
+ 
+ .portfolio-layer a
+ {
+   display: inline-flex;
+   justify-content: center;
+   align-items: center;
+   width:4rem;
+   height: 4rem;
+   background: var(--txt-color);
+   border-radius: 50%;
+   gap: 2rem;
+ 
+ }
+ 
+ .portfolio-layer a i
+ {
+   font-size: 2rem;
+   color: var(--second-color);
+ }
 
-}
-.portfolio h2
-{
-  margin-bottom: 4rem;
-}
-
-.portfolio-container
-{
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  align-items: center;
-  gap:2.5rem;
-}
-
-.portfolio-container .portfolio-box
-{
-  position: relative;
-  border-radius:2rem;
-  box-shadow: 0 0 1rem var(--bg-color);
-  overflow: hidden;
-  display: flex;
-}
-
-.portfolio-box img
-{
-  width: 407px;
-  height: 300px;
-  transition: .5s ease;
-}
-
-.portfolio-box:hover img
-{
-  transform: scale(1.1);
-
-}
-
-.portfolio-box .portfolio-layer
-{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.1),var(--main-color));
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  padding: 0 4rem;
-  transform: translateY(100%);
-  transition: .5s ease;
-  color:rgb(227, 233, 211);
-}
-
-.portfolio-box:hover .portfolio-layer
-{
-  transform: translateY(0);
-}
-.portfolio-layer h4
-{
-  font-size: 3rem;
-
-}
-
-.portfolio-layer p
-{
-  font-size: 1.6rem;
-  margin: .3rem 0 1rem;
-}
-
-.portfolio-layer a
-{
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width:5rem;
-  height: 5rem;
-  background: var(--txt-color);
-  border-radius: 50%;
-
-}
-
-.portfolio-layer a i
-{
-  font-size: 2rem;
-  color: var(--second-color);
-}
-
+/* Image Gallery styling End  */
 .contact h2
 {
   margin-bottom: 3rem;
