--- a/style.css
+++ b/style.css
@@ -101,17 +101,26 @@
  
  .home
  {
-   display: grid;
+  min-height:100vh;
+   display: flex;
    justify-content: center;
-   align-items: center;
-   grid-template-columns: 600px 300px;
- }
- .home-img img
- {
-  width: 20vw;
-  animation:floatImage 4s ease-in-out infinite;
+   align-items: start; 
+   width: 100vw;
+   margin:0; 
+   /* padding: 0; */
+   background-color: var(--bg-color);
  }
 
+ .carousel-inner > .item > img,
+ .carousel-inner > .item > a > img {
+   width: 100%;
+   margin: auto;
+ }
+
+ .farm,.resource,.contact{
+  background-color: var(--bg-color);
+ }
+ 
  @keyframes floatImage{
   0%
   {
@@ -130,23 +139,44 @@
  .home-content h3
  {
    font-size: 4.2rem;
-   font-weight: 700;
+   font-weight: 700; 
  }
  .home-content h3:nth-of-type(2)
  {
   margin-bottom: 2rem;
+  
  }
  span
  {
   color:var(--main-color);
  }
 
+ .about-content h2 {
+  color:var(--txt-color);
+ }
+.about-content p {
+  color: wheat;
+} 
 
+.farm h3{
+  color: white; 
+}
+.farm p{
+  color: wheat;
+}
+
+.farm h2, .resource h2 , .contact h2{
+  color:var(--txt-color);
+}
+.footer p {
+  color:var(--txt-color);
+}
  .home-content h1
  {
    font-size: 5.6rem;
    font-weight: 700;
    line-height: 1.3;
+   color:var(--txt-color);
  }
 .social-media a
 {
@@ -728,3 +758,20 @@
     .services-box a:hover {
         text-decoration: underline; /* Add underline on hover if needed */
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
