--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   border: none;
   outline: none;
   scroll-behavior: smooth;
-  font-family: 'Playfair Display', serif;
+  /*font-family: 'Playfair Display', serif;*/
   }
 
   :root
@@ -111,11 +111,17 @@
    justify-content: center;
    align-items: center;
    grid-template-columns: 600px 300px;
+   background-color:green;
+ }
+ .home-img{
+  padding-left: 45%;
  }
  .home-img img
  {
   width: 20vw;
   animation:floatImage 4s ease-in-out infinite;
+  border-radius: 25%;
+
  }
 
  @keyframes floatImage{
@@ -132,8 +138,9 @@
     transform:translateY(0);
   }
  }
+ 
 
- .home-content h3
+ /*.home-content h3
  {
    font-size: 4.2rem;
    font-weight: 700;
@@ -153,6 +160,13 @@
    font-size: 5.6rem;
    font-weight: 700;
    line-height: 1.3;
+ }
+ */
+ .home-content h1,h3
+ {
+    font-size:4.5rem;
+    font-family: 'Courier New', Courier, monospace;
+    color:rgb(240, 11, 11);
  }
 .social-media a
 {
