--- a/style.css
+++ b/style.css
@@ -111,19 +111,17 @@
    justify-content: center;
    align-items: center;
    grid-template-columns: 600px 300px;
-   background-color:green;
- }
- .home-img{
-  padding-left: 45%;
+   background-image: url('images/sowing.webp');
+   background-repeat: none;
+   background-size: 100% 100%;
+   opacity:60%;   
  }
  .home-img img
  {
   width: 20vw;
   animation:floatImage 4s ease-in-out infinite;
   border-radius: 25%;
-
  }
-
  @keyframes floatImage{
   0%
   {
@@ -139,11 +137,12 @@
   }
  }
  
+ 
 
- /*.home-content h3
+ .home-content h3
  {
-   font-size: 4.2rem;
-   font-weight: 700;
+   font-size: 5.2rem;
+   font-weight: 800;
  }
  .home-content h3:nth-of-type(2)
  {
@@ -157,16 +156,16 @@
 
  .home-content h1
  {
-   font-size: 5.6rem;
-   font-weight: 700;
+   font-size: 5.2rem;
+   font-weight: 800;
    line-height: 1.3;
  }
- */
+ 
  .home-content h1,h3
  {
     font-size:4.5rem;
     font-family: 'Courier New', Courier, monospace;
-    color:rgb(240, 11, 11);
+    color:white;
  }
 .social-media a
 {
