--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@
    line-height: 1.3;
  }
 .social-media a
-{
+ {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -168,15 +168,16 @@
   font-size: 2rem;
   color: var(--main-color);
   margin: 3rem 1.5rem 3rem 0;
-  transition: .5sec ease;
+  transition: all .3sec ease;
+}
 
+.socialIcons a:hover {
+  background: var(--main-color); /* Change background color on hover */
+  color: var(--second-color); /* Change text color on hover */
+  transform: scale(1.1); /* Scale up the icon slightly on hover */
+  box-shadow: 0 0 1rem var(--main-color); /* Add box shadow on hover */
 }
-.social-media a:hover
-{
-  background: var(--main-color);
-  color: var(--second-color);
-  box-shadow: 0 0 1rem var(--main-color);
-}
+
 
 .btn
 {
