contact form enhanced

--- a/style.css
+++ b/style.css
@@ -449,7 +449,7 @@
   text-align: center;
   margin-bottom: 3rem;
   padding: 50px;
-  border-radius: 20%;
+  border-radius: 2%;
 
 }
 .contact form .input-box
@@ -465,23 +465,28 @@
   width: 100%;
   padding: 1.5rem;
   font-size: 1.6rem;
-  color: rgb(206, 255, 206);
-  background: var(--second-color);
+  color: blue;
+  /*background: var(--second-color);*/
+  background: #fa5cd8;
   
   border-radius: .8rem;
   margin: .7rem 0;
   border-radius: 20px;
   /*background: #053314;*/
-  box-shadow: inset 23px 23px 21px #04240e,
+  /*box-shadow: inset 23px 23px 21px #04240e,
   inset -23px -23px 21px #07421a;
 box-shadow: inset 23px 23px 21px #04240e,
-            inset -23px -23px 21px #07421a;
+            inset -23px -23px 21px #07421a;*/
+            box-shadow: inset 23px 23px 21px #fa5cd8,
+            inset -23px -23px 21px #fa5cd8;
+          box-shadow: inset 23px 23px 21px #fa5cd8,
+                      inset -23px -23px 21px #fa5cd8;
   
 }
 .contact form .input-box input::placeholder,
 .contact form textarea::placeholder
 {
-  color: rgb(206, 255, 206);
+  color: blue;
 }
   input[type=number]::-webkit-inner-spin-button,
   input[type=number]::-webkit-inner-spin-button {
