contact page enhanced

--- a/style.css
+++ b/style.css
@@ -443,13 +443,16 @@
 
 .contact form
 {
-  background-color: white;
+ 
   max-width: 70rem;
   margin: 1rem auto;
   text-align: center;
   margin-bottom: 3rem;
   padding: 50px;
   border-radius: 2%;
+  border:2px solid white;
+  background: transparent;
+  background-color: #a9f396;
 
 }
 .contact form .input-box
@@ -457,18 +460,51 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-}
 
+  position:relative;
+}
+.icon-1{
+  position:absolute;
+  top:calc(30%);
+  left:1.25rem;
+}
+.icon-2{
+  position: absolute;
+  top: calc(30%);
+  left:32.24rem;
+}
+.icon-3{
+  position: absolute;
+  top:calc(30%);
+  left:1.25rem;
+}
+.icon-4{
+  position: absolute;
+  top: calc(30%);
+  left:32.24rem;
+}
+.icon-5{
+  position:absolute;
+  top:calc(36%);
+  left:6.24rem;
+}
+/*textarea::placeholder{
+  padding-left: 7%;
+}
+input::placeholder{
+  padding-left:15%;
+}
+*/
 .contact form .input-box input,
 .contact form textarea
 {
   width: 100%;
   padding: 1.5rem;
   font-size: 1.6rem;
-  color: blue;
+  color: rgb(249, 249, 253);
   /*background: var(--second-color);*/
-  background: #fa5cd8;
-  
+  background: #468536;
+
   border-radius: .8rem;
   margin: .7rem 0;
   border-radius: 20px;
@@ -477,16 +513,17 @@
   inset -23px -23px 21px #07421a;
 box-shadow: inset 23px 23px 21px #04240e,
             inset -23px -23px 21px #07421a;*/
-            box-shadow: inset 23px 23px 21px #fa5cd8,
-            inset -23px -23px 21px #fa5cd8;
-          box-shadow: inset 23px 23px 21px #fa5cd8,
-                      inset -23px -23px 21px #fa5cd8;
+            box-shadow: inset 23px 23px 21px #468536,
+            inset -23px -23px 21px #468536;
+          box-shadow: inset 23px 23px 21px #468536,
+                      inset -23px -23px 21px #468536;
   
 }
 .contact form .input-box input::placeholder,
 .contact form textarea::placeholder
 {
-  color: blue;
+  color:antiquewhite;
+  font-family: 'Courier New', Courier, monospace;
 }
   input[type=number]::-webkit-inner-spin-button,
   input[type=number]::-webkit-inner-spin-button {
