--- a/style.css
+++ b/style.css
@@ -412,7 +412,7 @@ span {
   align-items: center;
   flex-wrap: wrap;
   gap: 2rem;
-  margin-top: 15px;
+  margin: 4px;
 }
 
 .services-container .services-box {
